solved a bug with the normalization

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ __pycache__
 results
 paths_in_this_machine.py
 main2.py
+main3.py
+agn_processing_policy.py
+build_effective_lengths_from_simulation.py
